<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="add_food">Add Food</string>
    <string name="add_unique_food">Add Unique Food</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="calories_consumed">Calories Consumed:</string>
    <string name = "enter_serving_size">Serving Size:</string>
    <string name = "enter_calorie_count">Calorie Count:</string>
    <string name = "enter_food_name">Food Name:</string>
    <string name = "add_food_button">Add Food</string>
    <string name = "go_back">Go Back</string>
    <string name = "add_unique_exercise">Add Unique Exercise</string>
    <string name = "enter_exercise_name">Enter Exercise</string>
    <string name = "enter_calories_burned">Enter Calories Burned</string>
    <string name = "enter_duration">Enter Duration</string>
    <string name = "add_exercise_button">Add Exercise</string>
    <string name = "bmi_title">BMI Calculator</string>
    <string name = "enter_age">Age:</string>
    <string name = "gender_label">Gender:</string>
    <string name = "male">Male</string>
    <string name = "female">Female</string>
    <string name = "height_label">Height: </string>
    <string name = "enter_feet">Feet: </string>
    <string name = "enter_inches">Inches: </string>
    <string name = "enter_weight">Weight: </string>
    <string name = "activity_label">Activity: </string>
    <string name = "calculate_bmi">Calculate BMI </string>
    <string name = "add_bmi">Add BMI </string>
    <string name="bmi_result">BMI: %s</string>
    <string name="calorie_recom"> View Calorie Recommendations</string>
    <string name="calories_burned"> View Calories Burned: </string>
    <string name="_0">0</string>
</resources>