<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-32dp">

    <TextView
        android:id="@+id/calorie_title"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/calorie_tracker"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="361dp"
        android:layout_height="367dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="172dp"
        android:datePickerMode="calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_food_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="136dp"
        android:text="@string/add_food"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_exercise_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_exercise_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="136dp"
        android:text="@string/add_exercise"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_food_btn" />

    <TextView
        android:id="@+id/calorie_consumed"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="88dp"
        android:text="@string/calories_consumed"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calorie_value_text"
        android:layout_width="84dp"
        android:layout_height="31dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="88dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calories_burned_label"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="136dp"
        android:text="Calories Burned: "
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calories_burned_text"
        android:layout_width="84dp"
        android:layout_height="31dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="136dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_bmi_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_bmi"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_exercise_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
